--- a/labs/Lab14.ipynb
+++ b/labs/Lab14.ipynb
@@ -256,9 +256,7 @@
    "metadata": {},
    "source": [
     "## Task 10\n",
-    "Finish all tasks from all previous labs!! Focus on the tasks that cover topics you need the most practice with.\n",
-    "\n",
-    "If you want to play with the Fadecandy hardware from lab 12, let your TA know :)"
+    "Finish all tasks from all previous labs!! Focus on the tasks that cover topics you need the most practice with."
    ]
   }
  ],
