--- a/lessons/L15-1.ipynb
+++ b/lessons/L15-1.ipynb
@@ -181,17 +181,55 @@
     "### 1\n",
     "Write a program to roll a 6-sided die 1,000 times. Use a dictionary to store the count of each die face to determine the percentage of each outcome. Are the percentages what you would expect them to be?\n",
     "\n",
+    "\n",
     "Repeat the above problem for rolling two 6-sided dice (i.e. the sum of both dice). Are the percentages what you would expect them to be?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 16799, 2: 16663, 3: 16547, 4: 16778, 5: 16543, 6: 16670}\n",
+      "1 rolled 16.80%\n",
+      "2 rolled 16.66%\n",
+      "3 rolled 16.55%\n",
+      "4 rolled 16.78%\n",
+      "5 rolled 16.54%\n",
+      "6 rolled 16.67%\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def roll_die_n_times(n):\n",
+    "    '''\n",
+    "    \n",
+    "    '''\n",
+    "    results = {}\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        random_roll = random.randint(1, 6)\n",
+    "        if random_roll in results:\n",
+    "            results[random_roll] += 1\n",
+    "        else: # random_roll is not a key in results dict\n",
+    "            results[random_roll] = 1\n",
+    "    \n",
+    "    return results\n",
+    "\n",
+    "roll_dict = roll_die_n_times(100000)\n",
+    "print(roll_dict)\n",
+    "for roll in roll_dict:\n",
+    "    count = roll_dict[roll]\n",
+    "    print(\"%d rolled %.2f%%\" %(roll, count / 100000 * 100))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -203,12 +241,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hellogoodbye\n",
+      "hellogoodbye\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_str_concatenate(str1, str2):\n",
+    "    '''\n",
+    "    \n",
+    "    '''\n",
+    "    str1_list = list(str1)\n",
+    "    str2_list = list(str2)\n",
+    "    str1_list.extend(str2_list)\n",
+    "    merged_string = \"\".join(str1_list)\n",
+    "    return merged_string\n",
+    "\n",
+    "print(\"hello\" + \"goodbye\")\n",
+    "new_string = my_str_concatenate(\"hello\", \"goodbye\")\n",
+    "print(new_string)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -222,12 +283,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hello', 'how', 'are', 'you']\n",
+      "['hello', 'how', 'are', 'you']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_split(astring, delim):\n",
+    "    '''\n",
+    "    \n",
+    "    '''\n",
+    "    accum = \"\"\n",
+    "    pieces = []\n",
+    "    for i, char in enumerate(astring):\n",
+    "        if char == delim:\n",
+    "            pieces.append(accum)\n",
+    "            accum = \"\"\n",
+    "        else:\n",
+    "            accum += char\n",
+    "\n",
+    "    if len(accum) > 0:\n",
+    "        pieces.append(accum)           \n",
+    "    return pieces\n",
+    "    \n",
+    "def my_split_long_delim(astring, delim):\n",
+    "    '''\n",
+    "    \n",
+    "    '''\n",
+    "    dl = len(delim)\n",
+    "    pieces = []\n",
+    "    start_index = 0\n",
+    "    i = 0\n",
+    "    while i < len(astring) - dl:\n",
+    "        if astring[i:i+dl] == delim:\n",
+    "            pieces.append(astring[start_index:i])\n",
+    "            i = start_index = i + dl\n",
+    "        else:\n",
+    "            i += 1\n",
+    "            \n",
+    "    if start_index < i:\n",
+    "        pieces.append(astring[start_index:])\n",
+    "\n",
+    "    return pieces    \n",
+    "    \n",
+    "    \n",
+    "words = my_split(\"hello how are you\", \" \")\n",
+    "print(words)\n",
+    "\n",
+    "words2 = my_split_long_delim(\"hello??how??are??you\", \"??\")\n",
+    "print(words2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -241,19 +355,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter a letter: b\n",
+      "buggering\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def get_letter():\n",
+    "    '''\n",
+    "    \n",
+    "    '''\n",
+    "    letter = \"\"\n",
+    "    while letter == \"\":\n",
+    "        letter = input(\"Please enter a letter: \")\n",
+    "        if len(letter) > 1:\n",
+    "            print(\"INVALID!!!\")\n",
+    "            letter = \"\"\n",
+    "            \n",
+    "    return letter\n",
+    "\n",
+    "def get_random_word(infile, letter):\n",
+    "    word = \"\"\n",
+    "    start = -1\n",
+    "    end = -1\n",
+    "    lines = infile.readlines()\n",
+    "    for i in range(len(lines)):\n",
+    "        line = lines[i].strip()\n",
+    "        if start == -1 and line[0] == letter:\n",
+    "            start = i\n",
+    "        if start != -1 and end == -1 and line[0] != letter:\n",
+    "            end = i # end is exclusive\n",
+    "    \n",
+    "    rand_index = random.randrange(start, end)\n",
+    "    word = lines[rand_index].strip()\n",
+    "    return word\n",
+    "\n",
+    "letter = get_letter()\n",
+    "infile = open(\"words.txt\", \"r\")\n",
+    "word = get_random_word(infile, letter)\n",
+    "print(word)\n",
+    "infile.close()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 5\n",
-    "Download [titanic.txt](https://raw.githubusercontent.com/gsprint23/cpts111/master/lessons/files/titanic.txt). Each row in this file is a comma-separated list of strings representing attributes of passengers aboard the Titanic: class,age,sex,survived\n",
+    "Download [titanic.txt](https://raw.githubusercontent.com/gsprint23/cpts111/master/lessons/files/titanic.txt). This dataset is from this [site](https://rstudio-pubs-static.s3.amazonaws.com/108515_e5d253e6997545e881759eb458b6ba61.html).\n",
+    "\n",
+    "Each row in this file is a comma-separated list of strings representing attributes of passengers aboard the Titanic: \n",
+    "* class: 0 = crew, 1 = first class, 2 = second class, 3 = third class\n",
+    "* age: 1 = adult, 0 = child\n",
+    "* sex: 1 = male, 0 = female\n",
+    "* survived: 1 = yes, 0 = no\n",
     "\n",
     "Note: the first line in the file is the header describing the order of the attributes. Each line after the header represents a single passenger's attributes.\n",
     "\n",
@@ -261,7 +427,7 @@
     "1. How many people on board (according to this dataset)?\n",
     "1. How many survived? Of the total number of people, what percentage survived?\n",
     "1. How many children survived? Of the total number of children, what percentage survived?\n",
-    "1. How many male crew members were there? Of the total male crew members, what percentage survived? \n",
+    "1. How many male crew members survived? Of the total male crew members, what percentage survived? \n",
     "    * What about the female crew members? \n",
     "    * What are your observations about these findings?\n",
     "\n",
@@ -270,12 +436,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1) Total people on board: 2201\n",
+      "2) Total survivors: 711 (32.30%)\n",
+      "3) Total children survivors: 57 (52.29% of all children)\n",
+      "4) Total male crew member survivors: 192 (22.27% of all male crew members)\n",
+      "4*) Total female crew member survivors: 20 (86.96% of all female crew members)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def titanic_main():\n",
+    "    '''\n",
+    "    \n",
+    "    '''\n",
+    "    infile = open(\"titanic.txt\", \"r\")\n",
+    "    labels = infile.readline().strip()\n",
+    "    labels = labels.split(\",\")\n",
+    "    age_index = labels.index(\"age\")\n",
+    "    surv_index = labels.index(\"survived\")\n",
+    "    class_index = labels.index(\"class\")\n",
+    "    sex_index = labels.index(\"sex\")\n",
+    "    \n",
+    "    total = 0\n",
+    "    total_survived = 0\n",
+    "    total_children = 0\n",
+    "    total_children_survived = 0\n",
+    "    total_male_crew = 0\n",
+    "    total_female_crew = 0\n",
+    "    total_male_crew_survived = 0\n",
+    "    total_female_crew_survived = 0\n",
+    "    for line in infile.readlines():\n",
+    "        line = line.strip().split(\",\")\n",
+    "        if line[surv_index] == \"1\":\n",
+    "            total_survived += 1\n",
+    "            if line[age_index] == \"0\":\n",
+    "                total_children_survived += 1\n",
+    "            if line[class_index] == \"0\" and line[sex_index] == \"1\":\n",
+    "                total_male_crew_survived += 1\n",
+    "            if line[class_index] == \"0\" and line[sex_index] == \"0\":\n",
+    "                total_female_crew_survived += 1\n",
+    "        if line[age_index] == \"0\":\n",
+    "            total_children += 1\n",
+    "        if line[class_index] == \"0\" and line[sex_index] == \"1\":\n",
+    "            total_male_crew += 1\n",
+    "        if line[class_index] == \"0\" and line[sex_index] == \"0\":\n",
+    "            total_female_crew += 1\n",
+    "        total += 1\n",
+    "    \n",
+    "    infile.close()\n",
+    "    print(\"1) Total people on board: %d\" %(total))\n",
+    "    print(\"2) Total survivors: %d (%.2f%%)\" %(total_survived, total_survived / total * 100))\n",
+    "    print(\"3) Total children survivors: %d (%.2f%% of all children)\" %(total_children_survived, total_children_survived / total_children * 100))\n",
+    "    print(\"4) Total male crew member survivors: %d (%.2f%% of all male crew members)\" %(total_male_crew_survived, total_male_crew_survived / total_male_crew * 100)) \n",
+    "    print(\"4*) Total female crew member survivors: %d (%.2f%% of all female crew members)\" %(total_female_crew_survived, total_female_crew_survived / total_female_crew * 100))   \n",
+    "    \n",
+    "titanic_main()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -422,7 +647,7 @@
     "\n",
     "**Due at the final exam.**\n",
     "\n",
-    "Individually (or in pairs), solve the above exam review problems that we didn't solve in class. Each *correctly* solved problem is worth 1 point. Each student needs to turn in their own solutions to get credit for MA21.\n",
+    "Individually (or in pairs), solve the above exam review problems that we didn't solve in class (that means you will solve problems 6-15). Each *correctly* solved problem is worth 1 point. Each student needs to turn in their own solutions to get credit for MA21.\n",
     "\n",
     "To study for the exam, I recommend solving each problem on paper, then typing up your code and running it. You can check your work this way. Re-write your final, correct solutions in a neat manner to turn in for credit on MA21.\n",
     "\n",
@@ -441,6 +666,15 @@
     "1. Demos of fun stuff in CS.\n",
     "1. In case I forget, congrats on finishing CptS 111, have a great summer, and enjoy CptS 121!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
