--- a/POGIL.ipynb
+++ b/POGIL.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [CptS 111](http://piazza.com/wsu/spring2017/cpts111/home) POGIL Information\n",
+    "# [CptS 111](https://github.com/gsprint23/cpts111) POGIL Information\n",
     "[Washington State University](https://wsu.edu/)\n",
     "\n",
     "[Gina Sprint](http://eecs.wsu.edu/~gsprint/)\n",
@@ -39,9 +39,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -53,9 +53,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
