--- a/Python-Coding-Standard.ipynb
+++ b/Python-Coding-Standard.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [CptS 111](http://piazza.com/wsu/spring2017/cpts111/home) Coding Standard\n",
+    "# [CptS 111](https://github.com/gsprint23/cpts111) Coding Standard\n",
     "[Washington State University](https://wsu.edu/)\n",
     "\n",
     "[Gina Sprint](http://eecs.wsu.edu/~gsprint/)\n",
@@ -39,9 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "##############################################\n",
@@ -86,9 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def compute_area_circle(radius):\n",
@@ -116,9 +112,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -130,9 +126,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
