rename bonus pa

--- a/progassignments/PA7-BONUS-Strings.ipynb
+++ b/progassignments/PA7-BONUS-Strings.ipynb
@@ -4,12 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [CptS 111 Introduction to Algorithmic Problem Solving](http://piazza.com/wsu/fall2016/cpts111/home)\n",
+    "# [CptS 111 Introduction to Algorithmic Problem Solving](https://github.com/gsprint23/cpts111)\n",
     "[Washington State University](https://wsu.edu)\n",
     "\n",
     "[Gina Sprint](http://eecs.wsu.edu/~gsprint/)\n",
-    "## PA Bonus (30 pts)\n",
-    "<mark>Due Wednesday, April 19 at Midnight.</mark>\n",
+    "## PA7 (30 BONUS pts)\n",
     "\n",
     "### Learner Objectives\n",
     "At the conclusion of this programming assignment, participants should be able to:\n",
@@ -224,9 +223,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -238,9 +237,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
