--- a/examreviews/Exam2-Review.ipynb
+++ b/examreviews/Exam2-Review.ipynb
@@ -54,7 +54,7 @@
     "The exam covers everything we have covered so far in the course. Here is an outline of the topics we have covered so far:\n",
     "\n",
     "### Exam #1 Topics\n",
-    "[Exam #1 review topics](http://nbviewer.jupyter.org/github/gsprint23/cpts111/blob/master/lessons/L7-1.ipynb)\n",
+    "[Exam #1 review topics](https://nbviewer.jupyter.org/github/gsprint23/cpts111/blob/master/examreviews/Exam1-Review.ipynb)\n",
     "\n",
     "### 1 Iteration\n",
     "(Chapters 7, 8, 9 in zyBooks; Chapters 4 and 8 in *How to Think Like a Computer Scientist*)\n",
