--- a/examreviews/Exam3-Review.ipynb
+++ b/examreviews/Exam3-Review.ipynb
@@ -59,11 +59,11 @@
     "The exam covers everything we have covered in the course. Here is an outline of the topics we have covered so far:\n",
     "\n",
     "### Exam #1 Topics\n",
-    "[Exam #1 review topics](http://nbviewer.jupyter.org/github/gsprint23/cpts111/blob/master/lessons/L6-2.ipynb)\n",
+    "[Exam #1 review topics](https://nbviewer.jupyter.org/github/gsprint23/cpts111/blob/master/examreviews/Exam1-Review.ipynb)\n",
     "\n",
     "\n",
     "### Exam #2 Topics\n",
-    "[Exam #2 review topics](http://nbviewer.jupyter.org/github/gsprint23/cpts111/blob/master/lessons/L11-2.ipynb)\n",
+    "[Exam #2 review topics](https://nbviewer.jupyter.org/github/gsprint23/cpts111/blob/master/examreviews/Exam2-Review.ipynb)\n",
     "\n",
     "\n",
     "### 1 Lists\n",
